--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,9 @@
         "react"
     ],
     "rules": {
-      "react-hooks/rules-of-hooks": "error",
-      "react-hooks/exhaustive-deps": "error",
-      "react/react-in-jsx-scope": "off"
+      "react-hooks/rules-of-hooks": "off",
+      "react-hooks/exhaustive-deps": "off",
+      "react/react-in-jsx-scope": "off",
+      "react/prop-types": "off"
     }
 }
